<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f2e2"
    android:padding="8dp"
    tools:context=".MainActivity">
    <!--defafb, e9fafb -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_money_saving"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@id/txt_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/save_money_icon_dark" />

            <!--Default currency-->

            <LinearLayout
                android:id="@+id/btn_default_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_btn_trans_border_corner"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/txt_currency"
                    android:textColor="@color/color_blue" />

                <TextView
                    android:id="@+id/txt_default_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/txt_default_currency"
                    android:textColor="@color/color_blue" />
            </LinearLayout>

        </RelativeLayout>


        <!--Total saving-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/txt_saved"
                    android:textColor="@color/color_blue"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/chk_this_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="false"
                    android:text="@string/txt_this_month"
                    android:textColor="@color/color_blue" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txt_saving_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="0"
                    android:textColor="@color/color_green"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/txt_total_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/txt_default_currency"
                    android:textColor="@color/color_blue" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/share_border_color" />
        <!--Current saving-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_continuous_saving"
                android:textColor="@color/color_blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_current_saving"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/color_green"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_current_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_currency"
                android:textColor="@color/color_blue" />

            <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->

            <Button
                android:id="@+id/btn_save"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/bg_btn_trans_border_corner"
                android:text="@string/btn_save"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <!--Note-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/share_border_color" />
        <!--Calculate discount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_calculate"
                android:textColor="@color/color_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_price"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="x"
                    android:textColor="@color/color_blue" />

                <EditText
                    android:id="@+id/txt_discount_percent"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="%"
                    android:inputType="numberDecimal" />

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="6dp"-->
                <!--android:text="%" />-->


                <Button
                    android:id="@+id/btn_calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/bg_btn_trans_border_corner"
                    android:text="@string/btn_calculate"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_total_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/color_green"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txt_discount_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/txt_default_currency"
                    android:textColor="@color/color_blue"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_detail_3" />
</RelativeLayout>